--- a/locales/de.json
+++ b/locales/de.json
@@ -9,6 +9,7 @@
     "Newer Posts": "Neuere Beiträge",
     "No Posts": "No Posts",
     "Older Posts": "Ältere Beiträge",
+    "Page {page} of {pages}": "Seite {page} von {pages}",
     "Posts": "Beiträge",
     "Published with": "Veröffentlicht mit",
     "Show Comments": "Kommentare anzeigen",
@@ -20,5 +21,6 @@
     "on ": "in ",
     "No Posts": "Keine Beiträge",
     "% Post": "% Beitrag",
-    "% Posts": "% Beiträge"
+    "% Posts": "% Beiträge",
+    "This post was a collaboration between:": "Dieser Beitrag war eine Zusammenarbeit von:"
 }
