--- a/locales/en.json
+++ b/locales/en.json
@@ -9,6 +9,7 @@
     "Newer Posts": "Newer Posts",
     "No Posts": "No Posts",
     "Older Posts": "Older Posts",
+    "Page {page} of {pages}": "Page {page} of {pages}",
     "Posts": "Posts",
     "Published with": "Published with",
     "Show Comments": "Show Comments",
@@ -20,5 +21,6 @@
     "on ": "on ",
     "No Posts": "No Posts",
     "% Post": "% Post",
-    "% Posts": "% Posts"
+    "% Posts": "% Posts",
+    "This post was a collaboration between:": "This post was a collaboration between:"
 }
